# solana-okx

./: .gitignore  README.md
carbon-credits/: Anchor.toml  Cargo.toml
carbon-credits/programs/carbon-credits/: Cargo.toml
carbon-credits/programs/carbon-credits/src/: lib.rs
carbon-credits/programs/zero-knowledge-proofs/: Cargo.toml
carbon-credits/programs/zero-knowledge-proofs/src/: circuit.rs  field.rs  lib.rs  main.rs  merkle.rs  proof.rs  qap.rs  r1cs.rs
carbon-front/: package-lock.json  package.json
carbon-front/src/: App.tsx  Claims.tsx  OrganizationView.tsx  allorg.tsx  constants.ts  createclaim.tsx  createorg.tsx  lendreq.tsx
