[package]
name = "carbon-credits"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon_credits"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
zero-knowledge-proofs = { path = "../zero-knowledge-proofs" }
getrandom = { version = "0.2", features = ["custom"] }


[target.'cfg(not(target_os = "solana"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_os = "solana")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }